# Cineplex-Radar

./: .env.example  .env.unraid.example  .gitattributes  .gitignore  PLAN.md  README.md  UNRAID.md  compose.unraid.yaml  docker-compose.yml
.github/workflows/: container.yml
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/ca/radar/cineplex/: RadarSmokeTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ca/radar/cineplex/: MainActivity.kt  RadarViewModel.kt
android/app/src/main/java/ca/radar/cineplex/data/: AppSettings.kt  Models.kt  RadarApi.kt
android/app/src/main/res/values/: themes.xml
backend/: .dockerignore  Dockerfile  entrypoint.py  pyproject.toml
backend/app/: __init__.py  cineplex.py  config.py  database.py  discovery.py  engine.py  executor.py  llm.py  main.py  models.py  notifications.py  theatres.py  watcher.py
backend/docs/api-samples/: README.md  authenticated-flows.PENDING.md  bookable-dates.request.json  bookable-dates.response.json  movie-catalog.request.json  movie-catalog.response.json  seat-availability.request.json  seat-availability.response.json  seat-layout.request.json  seat-layout.response.json  showtimes.request.json  showtimes.response.json
backend/tests/: conftest.py  test_api.py  test_engine.py  test_llm.py  test_watcher.py
backend/tests/fixtures/: llm_golden.json  seat_availability_live_excerpt.json  seat_layout_live_excerpt.json  seat_map_engine.json  showtimes_engine.json
(+2 files in other folders)
