[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "radar-cineplex"
version = "0.1.0"
description = "Self-hosted Cineplex pre-order watcher and assisted-buy API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
test = ["pytest>=8.4,<9", "pytest-asyncio>=1.1,<2"]
browser = ["playwright>=1.54,<2"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

